--- a/src/app/content-nav/content-nav.component.html
+++ b/src/app/content-nav/content-nav.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light" >
     <div class="container-fluid">
-        <button type="button" id="sidebarCollapse" class="navbar-btn">
+        <button type="button" id="sidebarCollapse"  [ngClass]="didVote ? 'active' : ''"  class="navbar-btn" (click)="vote()">
             <span></span>
             <span></span>
-            <span></span>
+            <span></span>       
         </button>
         <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -12,18 +12,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav navbar-nav ml-auto">
-                <!-- <li class="nav-item">
-                    <a href="#" class="nav-link">Pets</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Products</a>
-                </li>
-                <li class="nav-item">
-                    <a href="~/blogs" class="nav-link">Blogs</a>
-                </li>
-                <li id="sign_up_btn" class="nav-item">
-                    <a href="~/user/register" class="nav-link">Sign Up</a>
-                </li> -->
                 <li class="nav-item">
                     <a (click)="logout()"><i class="fas fa-sign-out-alt"></i></a>
                 </li>
