--- a/src/app/employeerole/employeerole.component.html
+++ b/src/app/employeerole/employeerole.component.html
@@ -3,7 +3,7 @@
     <hr/>
     <div class="row">   
         <div class="col-md-8">  
-            <form [formGroup]="Form" (ngSubmit)="onSubmit(Form)">
+            <form [formGroup]="Form" (ngSubmit)="onSubmit()">
                 <div class="row">  
                     <div class="col-md-8 pr-3 mt-2">
                         <input type="text" ngModel 
@@ -32,6 +32,7 @@
         <div class="col-md-4">  
             <table class="table table-hover">
                 <th>Roles</th>
+                <th></th>
                 <tr *ngFor="let r of RoleList">
                     <td>{{r.Text}}</td>
                     <td>
@@ -42,28 +43,3 @@
         </div>
     </div>      
 </div>
-<!-- <form class="border border-light p-5" [formGroup]="Form" (ngSubmit)="onSubmit(Form)">
-    <div class="row">
-        <div class="col-md-8">
-            <input type="text" ngModel 
-                   pattern="[A-Za-z]{1,15}"
-                   maxlength="15"
-                   [ngClass]="{ 'is-invalid':  submitted && f.Role.errors }" 
-                   formControlName="Role" 
-                   id="EmployeeRole" 
-                   class="form-control col-md-6 float-right" 
-                   placeholder="Employee Role">
-            <div *ngIf="submitted && f.Role.errors" class="invalid-feedback">
-                <div *ngIf="f.Role.errors.required">Employee role is required</div>
-                <div *ngIf="f.Role.errors.pattern">Only alphabets are required</div>
-                <div *ngIf="f.Role.errors.maxlength">maximum length is 15</div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-8 pr-3 mt-2">
-            <button mdbBtn block="true" class="btn btn-primary float-right" type="submit">Submit</button>
-        </div>
-    </div>     
-</form> -->
