--- a/src/app/register-messr/register-messr.component.html
+++ b/src/app/register-messr/register-messr.component.html
@@ -3,7 +3,7 @@
     <hr/>
     <div class="row">   
         <div class="col-md-6">  
-            <form class="border border-light p-5" [formGroup]="Form" (ngSubmit)="onSubmit(Form)">
+            <form class="border border-light p-5" [formGroup]="Form" (ngSubmit)="onSubmit()">
                 <div class="row">  
                     <div class="col-md-12 pr-3 mt-2">
                         <input type="text" ngModel 
