--- a/src/app/sectors/sectors.component.html
+++ b/src/app/sectors/sectors.component.html
@@ -3,7 +3,7 @@
     <hr/>
     <div class="row">   
         <div class="col-md-8">  
-            <form class="border border-light p-5" [formGroup]="Form" (ngSubmit)="onSubmit(Form)">
+            <form class="border border-light p-5" [formGroup]="Form" (ngSubmit)="onSubmit()">
                 <div class="row">  
                     <div class="col-md-12 pr-3 mt-2">
                         <input type="text" ngModel 
@@ -30,6 +30,7 @@
         <div class="col-md-4">  
             <table class="table table-hover">
                 <th>Sector Name</th>
+                <th></th>
                 <tr *ngFor="let s of SectorList">
                     <td [routerLink]="['/sector',s.Value]">{{s.Text}}</td>
                     <td *ngIf="router.url == '/sector'">
