--- a/src/app/viewcase/viewcase.component.html
+++ b/src/app/viewcase/viewcase.component.html
@@ -15,7 +15,6 @@
                             [selectableGroupAsModel]="false"
                             [searchable]="true" 
                             [clearable]="true"
-                            [(ngModel)]="selected"
                             (change)="GetHouseList($event)">
                             <ng-option *ngFor="let s of SectorList" [value]="s.Value" [disabled]="s.disabled">
                                 {{s.Text}}
@@ -45,58 +44,10 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="row">
-                    <div class="col-md-6 pr-3 mt-2" style="min-width: 40px;">
-                        <input type="text"
-                            formControlName="DispatchNo"
-                            [ngClass]="{ 'is-invalid':  submitted && f.DispatchNo.errors }"
-                            placeholder="Dispatch No"
-                            maxlength="10"                                                                                                     
-                            class="form-control col-md-12 float-right">
-                        <div *ngIf="submitted && f.DispatchNo.errors" class="invalid-feedback">
-                            <div *ngIf="f.DispatchNo.errors.required">Diary No. is required</div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 pr-3 mt-2" style="min-width: 40px;">
-                        <input class="form-control"
-                            #datepickerYMD="bsDatepicker"
-                            bsDatepicker
-                            formControlName="DispatchDate"
-                            [ngClass]="{ 'is-invalid':  submitted && f.DispatchDate.errors }"  
-                            [bsConfig]="{ dateInputFormat: 'DD-MM-YYYY', containerClass: 'theme-dark-blue' }">
-                        <div *ngIf="submitted && f.DispatchDate.errors" class="invalid-feedback">
-                            <div *ngIf="f.DispatchDate.errors.required">Diary date is required</div>
-                        </div>                         
-                    </div>
-                </div> -->
-                <!-- <div class="row">
-                    <div class="col-md-6 pr-3 mt-2" style="min-width: 40px;">
-                        <input type="text"
-                            id="RegisterAmount"
-                            name="RegisterAmount"
-                            formControlName="RegisterAmount"
-                            [ngClass]="{ 'is-invalid':  submitted && f.RegisterAmount.errors }"
-                            placeholder="Register Amount"
-                            maxlength="12"                                                                                                     
-                            class="form-control col-md-12 float-right"
-                            prefix="Rs. "
-                            separatorLimit="000"
-                            mask="separator.3"
-                            thousandSeparator=",">
-                        <div *ngIf="submitted && f.RegisterAmount.errors" class="invalid-feedback">
-                            <div *ngIf="f.RegisterAmount.errors.maxlength">Max amount would be 99 lacs</div>
-                        </div>
-                    </div>
-                </div> -->
-                <!-- <div class="row">                    
-                    <div class="col-md-12 pr-3 mt-2">
-                        <button class="form-control col-md-6" mdbBtn block="true" class="btn btn-primary float-right" type="submit">Submit</button>
-                    </div>
-                </div>      -->
             </form>
         </div>
-        <div class="col-md-12 pr-3 mt-2" *ngIf="ReceiptList != ''">
-            <table class="table table-hover">
+        <div class="col-md-12 pr-3 mt-2 tbl-class" *ngIf="ReceiptList != ''">
+            <table class="table table-hover table-responsive">
                 <th align-center>Receipt Date</th>
                 <th align-center>Serial</th>
                 <th align-center>File</th>
@@ -126,9 +77,6 @@
                         <td *ngIf="i<1" align-center>{{rl.DiaryNo}}</td>
                         <td *ngIf="i<1" align-center>{{rl.DispatchDate}}</td>
                         <td *ngIf="i<1" align-center>{{rl.DispatchNo}}</td>
-                    <!-- <td *ngIf="router.url == '/employee'">
-                        <i class="far fa-trash-alt fa-lg text-danger" (click)="onDelete(e.EmployeeId)"></i>
-                    </td> -->
                 </tr>
             </table>
         </div>
