--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,15 @@
     border-radius: 4x;
 }
 
+.tbl-class{
+    width:1024px;
+    overflow: hidden;
+}
+
+.tbl-display{
+    display: table;
+}
+
 
 .navbar {
     padding: 15px 10px;
